fix: resolve rating status and supplier info in order list (#23)
* fix: resolve rating status and supplier info in order list

- Update `OrderService` to fetch order children (ratings) and parent (supplier).
- Enhance `OrderMapper` to determine `ratingStatus` (RATED/PENDING) based on children.
- Map `supplierName` from parent properties to DTO.

* fix: add null check for rating PermID in OrderMapper

- Prevent NullPointerException when accessing `rating.permId().permId()`.
- Ensure robust mapping even if child samples have incomplete identifiers.